2005-04-05  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, Shlibs.pm: warn but continue if any exceptions
	during update*_db

2005-04-05  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Started work for auto-switching depends inbetween builds

2005-04-04  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, Shlibs.pm: Check defined($FH) not defined(fileno($FH))

2005-04-04  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, Shlibs.pm: Only enforce non-concurrent indexing when
	cache is writable.

2005-03-30  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, Shlibs.pm: Switch to flock()-based concurrent-index lock

2005-03-30  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, Shlibs.pm: only use concurrent-index-run results if
	we have Storable

2005-03-25  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fix PostInst creation of /Applications/Fink
	symlinks (patch by AIDA Shinra)

2005-03-23  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Use the gcc* FAQ for all gcc* Homepages.

2005-03-23  Daniel Macks  <dmacks@netspace.org>

	* Shibs.pm: Scattered code cleanups.
	* Package.pm, Shlibs.pm: reduce Package/Shlibs differences.

2005-03-22  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, Package.pm, Shlibs.pm: Fixed scoping of $SIG{INT}

2005-03-21  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Implemented 'ignore_INT' option for execute().
	* PkgVersion.pm: Added ignore_INT for all dpkg calls.

2005-03-18  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Better sanity-check of user input to prompt_selection
	and prompt_boolean
	* Package.pm: Improved diagnostics when dup %f with different %e.
	
2005-03-14  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Fix prompt for CVS username.

2005-03-11  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: fix double display of shlibs library reading

2005-03-11  Daniel Macks  <dmacks@netspace.org>
