@@ -1,3 +1,7 @@
+2005-04-08  Daniel Macks  <dmacks@netspace.org>
+
+	* Engine.pm: Optimize 'fink list' with globs or multiple args.
+
 2005-04-05  Daniel Macks  <dmacks@netspace.org>
 
 	* Package.pm, Shlibs.pm: warn but continue if any exceptions
